crates/tokio-otp/tests/ui/topology/options_duplicate.stderr
error: duplicate `options` option
  --> tests/ui/topology/options_duplicate.rs:18:9
   |
18 |         options = tokio_otp::ActorOptions::new()
   |         ^^^^^^^
